syntax = "proto3";

package order;
option go_package = "/order";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}

message CreateOrderRequest {
  repeated uint64 product_ids = 1;
  string customer_email = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  uint64 id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message Order {
  uint64 id = 1;
  string customer_email = 2;
  repeated uint64 product_ids = 3;
  float total = 4;
}
